--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=eClassSystem
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/exercise
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
