--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.application.name=eClassSystem
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/exercise
+spring.application.name=eClass
+spring.datasource.url=jdbc:mysql://localhost:3306/pizza_java?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+server.port=8081
 spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
